--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,12 @@ main {
   text-align: center; }
 
 .portfolio--grid {
-  padding: var(--mobile--padding); }
+  padding: var(--mobile--padding);
+  width: calc(100% - 2rem);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+  grid-gap: 1rem;
+  grid-auto-flow: row dense; }
 
 .portfolio--grid--item {
   max-height: 350px;
@@ -587,7 +592,6 @@ main {
     grid-column: 1/-1;
     display: grid;
     grid-gap: 1rem;
-    grid-auto-rows: 350px;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-flow: row; }
     .portfolio--grid .portfolio--grid--item:last-child {
